# seqan

apps/LAGAN/: CMakeLists.txt  LAGAN.cpp  bovine_adenovirus_D.fa
demos/tutorial/lagan/: assignment1.cpp  assignment2.cpp  assignment3.cpp  base.cpp  base_assignment.cpp  example_reference.fa  solution1.cpp  solution2.cpp  solution3.cpp
include/seqan/seeds/: seeds_seed_base.h
manual/source/Tutorial/HowTo/UseCases/: Lagan.rst
